--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
-name = "mcr"
+name = "mirdb"
 version = "0.1.0"
-authors = ["Guan Xipeng <guanxipeng@4paradigm.com>"]
+authors = ["yetone <yetoneful@gmail.com>"]
 edition = "2018"
 
 [dependencies]
