--- a/skip-list/Cargo.toml
+++ b/skip-list/Cargo.toml
@@ -4,5 +4,8 @@ version = "0.1.0"
 authors = ["yetone <yetoneful@gmail.com>"]
 edition = "2018"
 
+[lib]
+name = "skip_list"
+
 [dependencies]
 rand = "0.6.1"
