--- a/tomatodb-server/Cargo.toml
+++ b/tomatodb-server/Cargo.toml
@@ -13,3 +13,9 @@ tokio = "0.1.18"
 tokio-io = "0.1.12"
 tokio-proto = "0.1"
 tokio-service = "0.1"
+glob = "0.3.0"
+serde = { version = "1.0", features = ["derive"] }
+bincode = "1.1.2"
+
+[dev-dependencies]
+rand = "0.6.1"
