--- a/tomatodb-server/Cargo.toml
+++ b/tomatodb-server/Cargo.toml
@@ -16,6 +16,7 @@ tokio-service = "0.1"
 glob = "0.3.0"
 serde = { version = "1.0", features = ["derive"] }
 bincode = "1.1.2"
+integer-encoding = "1.0"
 
 [dev-dependencies]
 rand = "0.6.1"
