--- a/sstable/Cargo.toml
+++ b/sstable/Cargo.toml
@@ -11,6 +11,6 @@ name = "sstable"
 crc = "1.2"
 integer-encoding = "1.0"
 snap = "0.2"
-cuckoofilter = "0.3.2"
+cuckoofilter = { git = "https://github.com/seiflotfy/rust-cuckoofilter", tag = "v0.4.0" }
 serde = { version = "1.0", features = ["derive"] }
 bincode = "1.1.2"
