--- a/tomatodb-server/Cargo.toml
+++ b/tomatodb-server/Cargo.toml
@@ -17,6 +17,7 @@ glob = "0.3.0"
 serde = { version = "1.0", features = ["derive"] }
 bincode = "1.1.2"
 integer-encoding = "1.0"
+snap = "0.2"
 
 [dev-dependencies]
 rand = "0.6.1"
