--- a/tomatodb-server/Cargo.toml
+++ b/tomatodb-server/Cargo.toml
@@ -20,6 +20,8 @@ integer-encoding = "1.0"
 snap = "0.2"
 crc = "1.2"
 memmap = "0.7.0"
+clap = "2.33.0"
+toml = "0.5.0"
 
 [dev-dependencies]
 rand = "0.6.1"
