--- a/mirdb-server/Cargo.toml
+++ b/mirdb-server/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "tomatodb-server"
+name = "mirdb-server"
 version = "0.1.0"
 authors = ["yetone <yetoneful@gmail.com>"]
 edition = "2018"
