--- a/mirdb-server/Cargo.toml
+++ b/mirdb-server/Cargo.toml
@@ -22,6 +22,8 @@ crc = "1.2"
 memmap = "0.7.0"
 clap = "2.33.0"
 toml = "0.5.0"
+log = "0.4.0"
+env_logger = "0.6.1"
 
 [dev-dependencies]
 rand = "0.6.1"
